commit translated contents

--- a/docs/ssma/oracle/messages/o2ss0101.md
+++ b/docs/ssma/oracle/messages/o2ss0101.md
@@ -5,15 +5,15 @@ author: nahk-ivanov
 ms.prod: sql
 ms.technology: ssma
 ms.devlang: sql
-ms.topic: article
+ms.topic: reference
 ms.date: 1/22/2020
 ms.author: alexiva
-ms.openlocfilehash: 9bdc628087fe5b173018d957831bc058dc413e68
-ms.sourcegitcommit: e572f1642f588b8c4c75bc9ea6adf4ccd48a353b
+ms.openlocfilehash: 769cc28c383ed1a797f7bbea12671a5f8623f20c
+ms.sourcegitcommit: 33f0f190f962059826e002be165a2bef4f9e350c
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 06/15/2020
-ms.locfileid: "84779305"
+ms.lasthandoff: 01/30/2021
+ms.locfileid: "99211963"
 ---
 # <a name="o2ss0101-invalid-parameter-omitting-error"></a>O2SS0101: 無効なパラメーターを省略しています (エラー)
 
