--- a/docs/ssma/oracle/messages/o2ss0351.md
+++ b/docs/ssma/oracle/messages/o2ss0351.md
@@ -5,15 +5,15 @@ author: nahk-ivanov
 ms.prod: sql
 ms.technology: ssma
 ms.devlang: sql
-ms.topic: article
+ms.topic: reference
 ms.date: 1/22/2020
 ms.author: alexiva
-ms.openlocfilehash: 4ab3a1a12108758b5045c21b1ae6cfc7e875faf0
-ms.sourcegitcommit: e572f1642f588b8c4c75bc9ea6adf4ccd48a353b
+ms.openlocfilehash: 62d8d32670dbd00c869f0d6a8fab1170d46b1d80
+ms.sourcegitcommit: 33f0f190f962059826e002be165a2bef4f9e350c
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 06/15/2020
-ms.locfileid: "84777894"
+ms.lasthandoff: 01/30/2021
+ms.locfileid: "99192258"
 ---
 # <a name="o2ss0351-conversion-of-collection-method-not-supported-error"></a>O2SS0351: コレクションメソッドの変換がサポートされていません (エラー)
 
