--- a/docs/ssma/oracle/messages/o2ss0359.md
+++ b/docs/ssma/oracle/messages/o2ss0359.md
@@ -5,15 +5,15 @@ author: nahk-ivanov
 ms.prod: sql
 ms.technology: ssma
 ms.devlang: sql
-ms.topic: article
+ms.topic: reference
 ms.date: 1/22/2020
 ms.author: alexiva
-ms.openlocfilehash: 5aa32b8af43d4023f5385be4259039f43b56e21a
-ms.sourcegitcommit: e572f1642f588b8c4c75bc9ea6adf4ccd48a353b
+ms.openlocfilehash: 877570f1edf735bcad0b4ee343dd21f93356751c
+ms.sourcegitcommit: 33f0f190f962059826e002be165a2bef4f9e350c
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 06/15/2020
-ms.locfileid: "84779224"
+ms.lasthandoff: 01/30/2021
+ms.locfileid: "99192178"
 ---
 # <a name="o2ss0359-cannot-get-description-for-return-type-of-function-call-expression-error"></a>O2SS0359: 関数呼び出し式の戻り値の型の説明を取得できません (Error)
 
