--- a/docs/ssma/oracle/messages/o2ss0407.md
+++ b/docs/ssma/oracle/messages/o2ss0407.md
@@ -5,15 +5,15 @@ author: nahk-ivanov
 ms.prod: sql
 ms.technology: ssma
 ms.devlang: sql
-ms.topic: article
+ms.topic: reference
 ms.date: 1/22/2020
 ms.author: alexiva
-ms.openlocfilehash: fc18b2de51f4478fc520373bce27f78bf54bc6d4
-ms.sourcegitcommit: e572f1642f588b8c4c75bc9ea6adf4ccd48a353b
+ms.openlocfilehash: 807ef1c45a30a310cee9c85b41d82c033ca83cce
+ms.sourcegitcommit: 33f0f190f962059826e002be165a2bef4f9e350c
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 06/15/2020
-ms.locfileid: "84779202"
+ms.lasthandoff: 01/30/2021
+ms.locfileid: "99192164"
 ---
 # <a name="o2ss0407-unsupported-collection-key-type-error"></a>O2SS0407: サポートされていないコレクションキーの種類 (エラー)
 
