--- a/docs/ssma/oracle/messages/o2ss0217.md
+++ b/docs/ssma/oracle/messages/o2ss0217.md
@@ -5,15 +5,15 @@ author: nahk-ivanov
 ms.prod: sql
 ms.technology: ssma
 ms.devlang: sql
-ms.topic: article
+ms.topic: reference
 ms.date: 1/22/2020
 ms.author: alexiva
-ms.openlocfilehash: 372aa72b86cacddd1dc8d7b00aaf283fce3b8bd5
-ms.sourcegitcommit: e572f1642f588b8c4c75bc9ea6adf4ccd48a353b
+ms.openlocfilehash: d4aad63615531b2a9f557fd3146af64dfa38ad24
+ms.sourcegitcommit: 33f0f190f962059826e002be165a2bef4f9e350c
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 06/15/2020
-ms.locfileid: "84778834"
+ms.lasthandoff: 01/30/2021
+ms.locfileid: "99177960"
 ---
 # <a name="o2ss0217-call-to-identity-sequence-currval-not-supported-error"></a>O2SS0217: id シーケンスの呼び出しがサポートされていません (エラー)
 
@@ -23,7 +23,7 @@ ms.locfileid: "84778834"
 
 は `SEQUENCE` Oracle の独立したデータベースオブジェクトであり、主キー/外部値に対して通常は一意の整数が自動的に作成されます。 は、 `CURRVAL` 指定されたシーケンスの現在の値にアクセスするために使用されます。
 
-オブジェクトを変換するとき `SEQUENCE` 、SSMA では **、シーケンス**処理とシーケンス処理の2つの方法を使用して、 **id を識別**できます。 シーケンスに変換すると、SSMA は `SEQUENCE` 各 Oracle シーケンスの SQL Server スキーマに対応するオブジェクトを作成します。 **Sequence To Identity**モードでは、ssma は SQL Server にオブジェクトを作成しない `SEQUENCE` ため、 `CURRVAL` Oracle シーケンスに対してを呼び出すと、エラーメッセージが生成されます。
+オブジェクトを変換するとき `SEQUENCE` 、SSMA では **、シーケンス** 処理とシーケンス処理の2つの方法を使用して、 **id を識別** できます。 シーケンスに変換すると、SSMA は `SEQUENCE` 各 Oracle シーケンスの SQL Server スキーマに対応するオブジェクトを作成します。 **Sequence To Identity** モードでは、ssma は SQL Server にオブジェクトを作成しない `SEQUENCE` ため、 `CURRVAL` Oracle シーケンスに対してを呼び出すと、エラーメッセージが生成されます。
 
 ## <a name="example"></a>例
 
@@ -38,7 +38,7 @@ BEGIN
 END;
 ```
 
-ここでは、シーケンスの現在の値を取得しようとするストアドプロシージャがあり `customers_seq` ます。 SSMA で**Sequence To Identity**モードが使用されている場合は、次のエラーメッセージが生成されます。
+ここでは、シーケンスの現在の値を取得しようとするストアドプロシージャがあり `customers_seq` ます。 SSMA で **Sequence To Identity** モードが使用されている場合は、次のエラーメッセージが生成されます。
 
 > O2SS0217: id シーケンスに対する呼び出しはサポートされていません
 
@@ -46,9 +46,9 @@ END;
 
 このエラーを解決するには、PL/SQL コードを書き直して、 `CURRVAL` id 列ではなく SQL Server でオブジェクトを生成するように SSMA プロジェクトの設定にアクセスしたり変更したりすることができ `SEQUENCE` ます。 後で実行するには:
 
-1. [**ツール**] メニューをクリックし、[**プロジェクトの設定**] を選択します。
-2. 次に、[**全般**] タブをクリックします。
-3. 次に、[**シーケンス変換**グループ] で、[シーケンスジェネレーターを**SQL Server シーケンスジェネレーターを使用**するように**変換**します。
+1. [ **ツール** ] メニューをクリックし、[ **プロジェクトの設定**] を選択します。
+2. 次に、[ **全般** ] タブをクリックします。
+3. 次に、[**シーケンス変換** グループ] で、[シーケンスジェネレーターを **SQL Server シーケンスジェネレーターを使用** するように **変換** します。
 4. これらの設定を適用し、[ **OK]** をクリックします。
 
 ## <a name="related-conversion-messages"></a>関連する変換メッセージ
