--- a/docs/ssma/oracle/messages/o2ss0350.md
+++ b/docs/ssma/oracle/messages/o2ss0350.md
@@ -5,15 +5,15 @@ author: nahk-ivanov
 ms.prod: sql
 ms.technology: ssma
 ms.devlang: sql
-ms.topic: article
+ms.topic: reference
 ms.date: 1/22/2020
 ms.author: alexiva
-ms.openlocfilehash: 36eeba40104c12db3df60fab0b0f60c43b1f6506
-ms.sourcegitcommit: e572f1642f588b8c4c75bc9ea6adf4ccd48a353b
+ms.openlocfilehash: 873a8d252a5b4659cba14dbd483174e618b42b6d
+ms.sourcegitcommit: 33f0f190f962059826e002be165a2bef4f9e350c
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 06/15/2020
-ms.locfileid: "84778935"
+ms.lasthandoff: 01/30/2021
+ms.locfileid: "99192266"
 ---
 # <a name="o2ss0350-conversion-of-packaged-variable-constant-data-type-is-not-supported-error"></a>O2SS0350: パッケージ化された変数 (定数) のデータ型の変換はサポートされていません (エラー)
 
@@ -58,7 +58,7 @@ SSMA で上記のコードを変換しようとすると、次のエラーメッ
 
 ## <a name="possible-remedies"></a>考えられる解決策
 
-上記の問題の解決策は、SQL Server で関数を使用することです `DATEDIFF` 。 `DATEDIFF`関数は、指定された2つの日付の間の日付と時刻の境界の数を返します。 そのためには、次のように SQL Server コードを更新する必要があります。
+上記の問題の解決策は、SQL Server で関数を使用することです `DATEDIFF` 。 `DATEDIFF` 関数は、指定された2つの日付の間の日付と時刻の境界の数を返します。 そのためには、次のように SQL Server コードを更新する必要があります。
 
 ```sql
 CREATE PROCEDURE dbo.PKG_VAR_TEST$SSMA_Initialize_Package
