commit translated contents

--- a/docs/ssma/oracle/messages/o2ss0245.md
+++ b/docs/ssma/oracle/messages/o2ss0245.md
@@ -5,15 +5,15 @@ author: nahk-ivanov
 ms.prod: sql
 ms.technology: ssma
 ms.devlang: sql
-ms.topic: article
+ms.topic: reference
 ms.date: 1/22/2020
 ms.author: alexiva
-ms.openlocfilehash: dd1ba82a77242a696e0a47a74cbe701af7f44ace
-ms.sourcegitcommit: 36fe62a3ccf34979bfde3e192cfa778505add465
+ms.openlocfilehash: f87dc5e896e4cfecc3078696cc2f542e1bd2f438
+ms.sourcegitcommit: 33f0f190f962059826e002be165a2bef4f9e350c
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 11/11/2020
-ms.locfileid: "94521152"
+ms.lasthandoff: 01/30/2021
+ms.locfileid: "99174364"
 ---
 # <a name="o2ss0245-cursor-conversion-in-return-statements-not-supported-error"></a>O2SS0245: return ステートメントでのカーソル変換はサポートされていません (エラー)
 
