commit translated contents

--- a/docs/ssma/oracle/messages/o2ss0293.md
+++ b/docs/ssma/oracle/messages/o2ss0293.md
@@ -5,15 +5,15 @@ author: nahk-ivanov
 ms.prod: sql
 ms.technology: ssma
 ms.devlang: sql
-ms.topic: article
+ms.topic: reference
 ms.date: 1/22/2020
 ms.author: alexiva
-ms.openlocfilehash: 3d3c3f2a62dc96bf93f01345c3a7e203740f45b1
-ms.sourcegitcommit: e572f1642f588b8c4c75bc9ea6adf4ccd48a353b
+ms.openlocfilehash: 697d63a34b14d3767b28333909ef40a0ca441079
+ms.sourcegitcommit: 33f0f190f962059826e002be165a2bef4f9e350c
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 06/15/2020
-ms.locfileid: "84779014"
+ms.lasthandoff: 01/30/2021
+ms.locfileid: "99186591"
 ---
 # <a name="o2ss0293-columns-list-in-set-clause-cannot-be-converted-error"></a>O2SS0293: set 句の Columns リストを変換できません (エラー)
 
