commit translated contents

--- a/docs/ssma/oracle/messages/o2ss0007.md
+++ b/docs/ssma/oracle/messages/o2ss0007.md
@@ -5,15 +5,15 @@ author: nahk-ivanov
 ms.prod: sql
 ms.technology: ssma
 ms.devlang: sql
-ms.topic: article
+ms.topic: reference
 ms.date: 1/22/2020
 ms.author: alexiva
-ms.openlocfilehash: 54c0a5ceb1619bdf71ed2fe10643ae0badfda6d4
-ms.sourcegitcommit: e572f1642f588b8c4c75bc9ea6adf4ccd48a353b
+ms.openlocfilehash: 769e649dec645a65cf4f0020c50c1882f4f480bd
+ms.sourcegitcommit: 33f0f190f962059826e002be165a2bef4f9e350c
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 06/15/2020
-ms.locfileid: "84779594"
+ms.lasthandoff: 01/30/2021
+ms.locfileid: "99211038"
 ---
 # <a name="o2ss0007-check-constraint-condition-not-parsed-error"></a>O2SS0007: Check 制約条件が解析されていません (エラー)
 
