--- a/docs/ssma/oracle/messages/o2ss0028.md
+++ b/docs/ssma/oracle/messages/o2ss0028.md
@@ -5,15 +5,15 @@ author: nahk-ivanov
 ms.prod: sql
 ms.technology: ssma
 ms.devlang: sql
-ms.topic: article
+ms.topic: reference
 ms.date: 10/15/2020
 ms.author: alexiva
-ms.openlocfilehash: 0ac13f09367894e5d92ebb914ef16eb6fb443d90
-ms.sourcegitcommit: 757b827cf322c9f792f05915ff3450e95ba7a58a
+ms.openlocfilehash: 87402916826dcd8f95735dfa0360bbf78142b4dd
+ms.sourcegitcommit: 33f0f190f962059826e002be165a2bef4f9e350c
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 10/16/2020
-ms.locfileid: "92137553"
+ms.lasthandoff: 01/30/2021
+ms.locfileid: "99211014"
 ---
 # <a name="o2ss0028-rowid-column-generated-info"></a>O2SS0028: `ROWID` 列が生成されました (情報)
 
@@ -70,9 +70,9 @@ SSMA でこのトリガーを変換しようとすると、次の T-sql が SQL 
         VALUES (('-' + ISNULL(@old$DATA, '')))
     ```
 
-## <a name="additional-information"></a>関連情報
+## <a name="additional-information"></a>追加情報
 
-この動作は [ **ROWID 列の生成**] プロジェクト設定によって制御されます。この設定は、[**ツール**] [プロジェクトの設定]、[  -  **Project Settings**  -  **汎用**  -  **変換**の  -  **ROWID の生成**] の下にあります。 設定が [ **いいえ**] に設定されているにもかかわらず、トリガーの変換中に列が必要であることが示された場合は `ROWID` 、 [O2SS0239](o2ss0239.md) 変換エラーが生成されます。
+この動作は [ **ROWID 列の生成**] プロジェクト設定によって制御されます。この設定は、[**ツール**] [プロジェクトの設定]、[  -    -  **汎用**  -  **変換** の  -  **ROWID の生成**] の下にあります。 設定が [ **いいえ**] に設定されているにもかかわらず、トリガーの変換中に列が必要であることが示された場合は `ROWID` 、 [O2SS0239](o2ss0239.md) 変換エラーが生成されます。
 
 ## <a name="related-conversion-messages"></a>関連する変換メッセージ
 
