--- a/docs/ssma/oracle/messages/o2ss0029.md
+++ b/docs/ssma/oracle/messages/o2ss0029.md
@@ -5,15 +5,15 @@ author: nahk-ivanov
 ms.prod: sql
 ms.technology: ssma
 ms.devlang: sql
-ms.topic: article
+ms.topic: reference
 ms.date: 1/22/2020
 ms.author: alexiva
-ms.openlocfilehash: faf0746aa72f3bb10adfcb1fb717c491091ed0a9
-ms.sourcegitcommit: e572f1642f588b8c4c75bc9ea6adf4ccd48a353b
+ms.openlocfilehash: 3f1bb03b332964edd98e7ec2ca4cd215894fb37e
+ms.sourcegitcommit: 33f0f190f962059826e002be165a2bef4f9e350c
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 06/15/2020
-ms.locfileid: "84778884"
+ms.lasthandoff: 01/30/2021
+ms.locfileid: "99211002"
 ---
 # <a name="o2ss0029-cannot-convert-exit-statement-error"></a>O2SS0029: EXIT ステートメントを変換できません (エラー)
 
