--- a/docs/ssma/oracle/messages/o2ss0104.md
+++ b/docs/ssma/oracle/messages/o2ss0104.md
@@ -5,15 +5,15 @@ author: nahk-ivanov
 ms.prod: sql
 ms.technology: ssma
 ms.devlang: sql
-ms.topic: article
+ms.topic: reference
 ms.date: 1/22/2020
 ms.author: alexiva
-ms.openlocfilehash: 99480794d43b28878f17036f8885b05eda3ef962
-ms.sourcegitcommit: e572f1642f588b8c4c75bc9ea6adf4ccd48a353b
+ms.openlocfilehash: 0527eff0404aaa0dd4c7640a2550b03bdcf11c56
+ms.sourcegitcommit: 33f0f190f962059826e002be165a2bef4f9e350c
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 06/15/2020
-ms.locfileid: "84779574"
+ms.lasthandoff: 01/30/2021
+ms.locfileid: "99211464"
 ---
 # <a name="o2ss0104-unpackaged-function-call-is-missing-a-parameter-error"></a>O2SS0104: アンパッケージ関数呼び出しにパラメーターがありません (エラー)
 
@@ -56,9 +56,9 @@ SSMA で上記のコードを変換しようとすると、次のエラーメッ
 
 このエラーを解決するには、SSMA プロジェクトの設定が適切に構成されていることを確認する必要があります。
 
-1. [**ツール**] メニューに移動し、[**プロジェクトの設定**] を選択します。
-2. 次に、[**全般**] タブをクリックします。
-3. [**ステートメントの変換**] で、[**既定の引数を使用するサブプログラムに呼び出しを変換する**] を **[はい]** に変更します。
+1. [ **ツール** ] メニューに移動し、[ **プロジェクトの設定**] を選択します。
+2. 次に、[ **全般** ] タブをクリックします。
+3. [ **ステートメントの変換**] で、[ **既定の引数を使用するサブプログラムに呼び出しを変換する** ] を **[はい]** に変更します。
 
 ## <a name="related-conversion-messages"></a>関連する変換メッセージ
 
