--- a/docs/includes/applies-to-version/_ss2019.md
+++ b/docs/includes/applies-to-version/_ss2019.md
@@ -4,12 +4,12 @@ ms.service: sql
 ms.topic: include
 ms.date: 06/11/2020
 ms.author: mikeray
-ms.openlocfilehash: 7c8a61dde5dd8c2930d05b353e844e0d9551be63
-ms.sourcegitcommit: c5078791a07330a87a92abb19b791e950672e198
+ms.openlocfilehash: e03e58fb712132cfb93490e237c031a110711fb7
+ms.sourcegitcommit: b1cec968b919cfd6f4a438024bfdad00cf8e7080
 ms.translationtype: HT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 11/26/2020
-ms.locfileid: "96119472"
+ms.lasthandoff: 02/01/2021
+ms.locfileid: "99233943"
 ---
-<Token>![はい](../media/yes-icon.png)[!INCLUDE [sssqlv15-md](../sssqlv15-md.md)]</Token>
+<Token>![はい](../media/yes-icon.png)[!INCLUDE [sssql19-md](../sssql19-md.md)]</Token>
 
