--- a/docs/includes/applies-to-version/_ss2017.md
+++ b/docs/includes/applies-to-version/_ss2017.md
@@ -4,12 +4,12 @@ ms.service: sql
 ms.topic: include
 ms.date: 06/11/2020
 ms.author: mikeray
-ms.openlocfilehash: 4eec5528d8cf987a4b5eb83ab9fc5acb17224ee6
-ms.sourcegitcommit: c5078791a07330a87a92abb19b791e950672e198
+ms.openlocfilehash: 935625c390dc52d3bcd3e55196c8b453e147a56d
+ms.sourcegitcommit: b1cec968b919cfd6f4a438024bfdad00cf8e7080
 ms.translationtype: HT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 11/26/2020
-ms.locfileid: "96129536"
+ms.lasthandoff: 02/01/2021
+ms.locfileid: "99244988"
 ---
-<Token>![はい](../media/yes-icon.png)[!INCLUDE [sssqlv14-md](../sssqlv14-md.md)]</Token>
+<Token>![はい](../media/yes-icon.png)[!INCLUDE [sssql17-md](../sssql17-md.md)]</Token>
 
