commit translated contents

--- a/docs/ssma/oracle/messages/o2ss0007.md
+++ b/docs/ssma/oracle/messages/o2ss0007.md
@@ -8,18 +8,18 @@ ms.devlang: sql
 ms.topic: reference
 ms.date: 1/22/2020
 ms.author: alexiva
-ms.openlocfilehash: 769e649dec645a65cf4f0020c50c1882f4f480bd
-ms.sourcegitcommit: 33f0f190f962059826e002be165a2bef4f9e350c
+ms.openlocfilehash: 5a19b463f87b4e4b58f5a59e5baa63d8c54ad979
+ms.sourcegitcommit: 917df4ffd22e4a229af7dc481dcce3ebba0aa4d7
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 01/30/2021
-ms.locfileid: "99211038"
+ms.lasthandoff: 02/10/2021
+ms.locfileid: "100069385"
 ---
 # <a name="o2ss0007-check-constraint-condition-not-parsed-error"></a>O2SS0007: Check 制約条件が解析されていません (エラー)
 
 この記事では、SQL Server Migration Assistant (SSMA) for Oracle が `BINARY_FLOAT` 、 `NAN` (非数) 条件をチェックするための制約を持つ列を変換できない理由について説明します。
 
-## <a name="background"></a>バックグラウンド
+## <a name="background"></a>背景
 
 Oracle では、 `BINARY_FLOAT` データ型を使用して、アプリケーションで数値のアンダーフローまたはオーバーフロー値を格納できます。 SQL Server は、数値のオーバーフローまたはアンダーフローが計算されるとすぐにエラーを生成するため、データ型に値を格納することはできません `FLOAT` 。 制約条件が値をチェックしているテーブルのスキーマを変換しようとすると `NAN` 、SQL Server がのような浮動小数点条件をサポートしないため、SSMA によってエラーが生成され `NAN` ます。
 
